--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,41 @@
 /* write your override styles here */
+/* CSS Reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+body {
+    background: black url(../images/sketch.jpg) no-repeat center;
+    background-size: cover;
+  }
+  
+  #wall {
+    position: relative;
+    margin: 40px auto;
+    width: 980px;
+    height: 622px;
+    background: url(../images/wall.jpg) no-repeat center;
+    -moz-box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+    -webkit-box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+    box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+    border: 15px solid white;
+    border-bottom: 60px solid white;
+  }
+  
